@@ -1,5 +1,5 @@
 
-/* $Id: tools.h,v 1.10 1996/04/10 20:57:27 wessels Exp $ */
+/* $Id: tools.h,v 1.11 1996/04/15 19:20:28 wessels Exp $ */
 
 extern char *getMyHostname _PARAMS((void));
 extern int getMaxFD _PARAMS((void));
@@ -17,6 +17,7 @@ extern void setMaxFD _PARAMS((void));
 extern time_t getCurrentTime _PARAMS((void));
 extern void normal_shutdown _PARAMS((void));
 extern void reconfigure _PARAMS((int sig));
+extern int tvSubMsec _PARAMS((struct timeval, struct timeval));
 
 extern int do_mallinfo;
 extern time_t cached_curtime;
